# treentern

./: Cargo.toml  README.md
.github/: publish.yml
.github/workflows/: publish.yaml
src/: arena.rs  derive.rs  lib.rs
tests/: ui.rs
tests/ui/pass/: derive_fields.rs  derive_intern.rs
treentern-derive/: Cargo.toml
treentern-derive/src/: lib.rs
